deploy: eb355f74a203bf097a7cf77d2a755fa282d40b29

--- a/algebra/millerrabin.html
+++ b/algebra/millerrabin.html
@@ -140,10 +140,54 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="miller-rabin-primality-test"><a class="header" href="#miller-rabin-primality-test">Miller-Rabin Primality Test</a></h1>
-<p>Deterministic Miller-Rabin primality test determines whether a certain unsigned integer is a prime or not within \(O(\log{n})\) time. This test only works for integers under \(2^{64}\).</p>
-<pre><code class="language-rust noplayground">pub trait Miller {
-    fn rem_mul(x: Self, y: Self, m: Self) -&gt; Self;
-    fn rem_pow(base: Self, exp: Self, m: Self) -&gt; Self;
+<p>Deterministic Miller-Rabin primality test determines whether a certain unsigned integer is a prime or not within \(O(\log{n})\) time. This test only works for integers under \(2^{64}\). <br />
+Required snippets: <a href="../misc/zero_one_trait.html#Zero">Zero</a>, <a href="../misc/zero_one_trait.html#One">One</a></p>
+<pre><code class="language-rust noplayground">use std::ops::{BitAnd, Mul, Rem, RemAssign, ShrAssign};
+
+trait Cast&lt;T&gt; {
+    fn cast_to(self) -&gt; T;
+}
+
+macro_rules! impl_primitive_cast {
+    ($t:ty, $u:ty) =&gt; {
+        impl Cast&lt;$t&gt; for $u {
+            #[inline(always)]
+            fn cast_to(self) -&gt; $t {
+                self as $t
+            }
+        }
+    };
+}
+
+#[inline(always)]
+fn rem_mul&lt;T, U&gt;(x: T, y: T, m: T) -&gt; T
+where
+    T: Copy + Cast&lt;U&gt;,
+    U: Copy + Mul&lt;Output = U&gt; + Rem&lt;Output = U&gt; + Cast&lt;T&gt;,
+{
+    let (x, y, m): (U, U, U) = (x.cast_to(), y.cast_to(), m.cast_to());
+    ((x * y) % m).cast_to()
+}
+
+#[inline]
+fn rem_pow&lt;T, U&gt;(mut base: T, mut exp: T, m: T) -&gt; T
+where
+    T: Copy + Zero + One + Eq + RemAssign + BitAnd&lt;Output = T&gt; + ShrAssign + Cast&lt;U&gt;,
+    U: Copy + Mul&lt;Output = U&gt; + Rem&lt;Output = U&gt; + Cast&lt;T&gt;,
+{
+    exp %= m;
+    let mut r = T::one();
+    while exp != T::zero() {
+        if exp &amp; T::one() != T::zero() {
+            r = rem_mul::&lt;T, U&gt;(r, base, m);
+        }
+        exp &gt;&gt;= T::one();
+        base = rem_mul::&lt;T, U&gt;(base, base, m);
+    }
+    r
+}
+
+pub trait Miller {
     fn naive_primality(self) -&gt; bool;
     fn miller_rabin(self, a: Self) -&gt; bool;
     fn miller_primality(self) -&gt; bool;
@@ -152,23 +196,11 @@
 
 macro_rules! miller_rabin_impl {
     ($t:ty, $u:ty, $limit:expr,  $($x:expr),*) =&gt; {
+        impl_primitive_cast!($t, $u);
+        impl_primitive_cast!($u, $t);
+
         impl Miller for $t {
             #[inline]
-            fn rem_mul(x: $t, y: $t, m: $t) -&gt; $t {
-                ((x as $u * y as $u) % m as $u) as $t
-            }
-            fn rem_pow(mut base: $t, mut exp: $t, m: $t) -&gt; $t {
-                exp %= m;
-                let mut r: $t = 1;
-                while exp != 0 {
-                    if exp &amp; 1 != 0 {
-                        r = Self::rem_mul(r, base, m);
-                    }
-                    exp &gt;&gt;= 1;
-                    base = Self::rem_mul(base, base, m);
-                }
-                r
-            }
             fn naive_primality(self) -&gt; bool {
                 let mut i: $t = 2;
                 while i * i &lt;= self {
@@ -179,23 +211,25 @@ macro_rules! miller_rabin_impl {
                 }
                 true
             }
+
             fn miller_rabin(self, a: $t) -&gt; bool {
                 let d = self - 1;
                 let mut p = d;
                 while p&amp;1==0 {
                     p&gt;&gt;=1;
                 }
-                let mut t = Self::rem_pow(a, p, self);
+                let mut t = rem_pow::&lt;$t, $u&gt;(a, p, self);
                 let at_last = t == d || t == 1;
 
                 while p!=d {
                     p &lt;&lt;= 1;
-                    t = Self::rem_mul(t, t, self);
+                    t = rem_mul::&lt;$t, $u&gt;(t, t, self);
                     if t == self-1 {return true;}
                 }
 
                 at_last
             }
+
             fn miller_primality(self) -&gt; bool {
                 $(
                     if !self.miller_rabin($x) {
@@ -204,6 +238,7 @@ macro_rules! miller_rabin_impl {
                 )*
                 true
             }
+
             fn is_prime(self) -&gt; bool {
                 if self &lt;= 1 {
                     false
