--- a/geometry/convexhull.html
+++ b/geometry/convexhull.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Chinese Remainder Theorem - Rust Snippets for Competitive Programming</title>
+        <title>Convex Hull - Rust Snippets for Competitive Programming</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html" class="active"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">6.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">7.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">7.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">7.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">7.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">8.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">9.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">10.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">11.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">12.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/psbase.html"><strong aria-hidden="true">13.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">14.</strong> Zero/One Trait</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">6.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">7.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">7.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">7.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">7.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">8.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">9.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">10.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html" class="active"><strong aria-hidden="true">11.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">12.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/psbase.html"><strong aria-hidden="true">13.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">14.</strong> Zero/One Trait</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -139,70 +139,132 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="chinese-remainder-theorem"><a class="header" href="#chinese-remainder-theorem">Chinese Remainder Theorem</a></h1>
-<p>Reference: PyRival <a href="https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py">https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py</a></p>
-<p>Returns \(x\) such that \(x = r_i \mod m_i\) for all \(i\). </p>
-<h2 id="snippet"><a class="header" href="#snippet">Snippet</a></h2>
-<p>Required snippets: <a href="gcd.html#gcd">GCD</a>, <a href="extgcd.html#extended-euclid-algorithm">Extended Euclidean Algorithm</a></p>
-<pre><code class="language-rust noplayground">// Chinese remainder theorem
-//
-// Reference: PyRival &lt;https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py&gt;
+                        <h1 id="convex-hull"><a class="header" href="#convex-hull">Convex Hull</a></h1>
+<h2 id="graham-scan"><a class="header" href="#graham-scan">Graham Scan</a></h2>
+<p>This snippet excludes every points on vertices from the convex hull, and only includes points of both ends.</p>
+<h3 id="snippet"><a class="header" href="#snippet">Snippet</a></h3>
+<pre><code class="language-rust noplayground">use std::cmp::Ordering;
 
-#[inline(always)]
-fn safe_mod(mut x: i64, m: i64) -&gt; i64 {
-    x %= m;
-    if x &lt; 0 {
-        x + m
-    } else {
-        x
-    }
+#[derive(Clone, Debug, Eq, PartialEq)]
+struct Point {
+    x: i64,
+    y: i64,
 }
 
-/// Returns the greatest common divisor of a and b
-fn gcd(mut a: i64, mut b: i64) -&gt; i64 {
-    while b != 0 {
-        let t = b;
-        b = a % b;
-        a = t;
-    }
-    a
-}
-
-/// Returns gcd(a, b), s, r s.t. a*s + b*r = gcd(a, b)
-fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
-    let (mut s, mut old_s) = (0, 1);
-    let (mut r, mut old_r) = (b, a);
-    while r != 0 {
-        let q = old_r / r;
-
-        let new_r = old_r - q * r;
-        old_r = r;
-        r = new_r;
-
-        let new_s = old_s - q * s;
-        old_s = s;
-        s = new_s;
-    }
-
-    (
-        old_r,
-        old_s,
-        if b != 0 { (old_r - old_s * a) / b } else { 0 },
-    )
-}
-
-/// Returns $x$ s.t. $x=r_i (mod m_i)$ for all $i$
-pub fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
-    let (mut x, mut m_prod) = (0, 1);
-    for (bi, mi) in r.iter().zip(m.iter()) {
-        let (g, s, _) = ext_gcd(m_prod, *mi);
-        if safe_mod((bi - x) % mi, g) != 0 {
-            return None;
+impl Point {
+    fn add(&amp;self, other: &amp;Self) -&gt; Self {
+        Self {
+            x: self.x + other.x,
+            y: self.y + other.y,
         }
-        x += m_prod * (s * safe_mod(bi - x, *mi) / g);
-        m_prod = (m_prod * mi) / gcd(m_prod, *mi);
     }
-    Some(safe_mod(x, m_prod))
+    fn sub(&amp;self, other: &amp;Self) -&gt; Self {
+        Self {
+            x: self.x - other.x,
+            y: self.y - other.y,
+        }
+    }
+}
+
+#[derive(Clone, Debug, Eq, PartialEq)]
+enum Turn {
+    CW,
+    CCW,
+    Zero,
+}
+
+fn get_turn(v1: &amp;Point, v2: &amp;Point) -&gt; Turn {
+    let prod = v1.x * v2.y - v1.y * v2.x;
+    if prod &gt; 0 {
+        Turn::CCW
+    } else if prod &lt; 0 {
+        Turn::CW
+    } else {
+        Turn::Zero
+    }
+}
+
+fn compare_ccw(a: &amp;Point, b: &amp;Point) -&gt; Ordering {
+    if a == b {
+        return Ordering::Equal;
+    }
+    if a.x == 0 &amp;&amp; a.y == 0 {
+        return Ordering::Less;
+    } else if b.x == 0 &amp;&amp; b.y == 0 {
+        return Ordering::Greater;
+    }
+
+    let turn = get_turn(a, b);
+    if turn == Turn::CCW {
+        return Ordering::Less;
+    } else if turn == Turn::CW {
+        return Ordering::Greater;
+    }
+
+    let a_dist = a.x * a.x + a.y * a.y;
+    let b_dist = b.x * b.x + b.y * b.y;
+    a_dist.cmp(&amp;b_dist)
+}
+
+fn convex_hull(arr: &amp;mut [Point]) -&gt; Vec&lt;Point&gt; {
+    let pivot = {
+        let mut pivot = Point {
+            x: i64::MAX,
+            y: i64::MAX,
+        };
+        for v in arr.iter() {
+            if pivot.y &gt; v.y || (pivot.y == v.y &amp;&amp; pivot.x &gt; v.x) {
+                pivot.x = v.x;
+                pivot.y = v.y;
+            }
+        }
+        pivot
+    };
+
+    for v in arr.iter_mut() {
+        *v = v.sub(&amp;pivot);
+    }
+
+    arr.sort_unstable_by(compare_ccw);
+
+    let mut stack = vec![arr[0].clone()];
+    let mut i = 1;
+    while i &lt; arr.len() {
+        if stack.len() == 1 {
+            if arr[i] != stack[0] {
+                stack.push(arr[i].clone());
+            }
+            i += 1;
+            continue;
+        }
+
+        let a = &amp;arr[i];
+        let b = &amp;stack[stack.len() - 1];
+        let c = &amp;stack[stack.len() - 2];
+        match get_turn(&amp;b.sub(c), &amp;a.sub(b)) {
+            Turn::CCW =&gt; {
+                stack.push(a.clone());
+                i += 1;
+            }
+            Turn::CW =&gt; {
+                stack.pop();
+            }
+            _ =&gt; {
+                stack.pop();
+                stack.push(a.clone());
+                i += 1;
+            }
+        }
+    }
+
+    for v in arr.iter_mut() {
+        *v = v.add(&amp;pivot);
+    }
+    for v in stack.iter_mut() {
+        *v = v.add(&amp;pivot);
+    }
+
+    stack
 }
 </code></pre>
 
@@ -210,10 +272,10 @@ pub fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../algebra/extgcd.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../graphs/2sat.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../algebra/millerrabin.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../unclass/lis.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -222,10 +284,10 @@ pub fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../algebra/extgcd.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../graphs/2sat.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../algebra/millerrabin.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../unclass/lis.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
