--- a/misc/psbase.html
+++ b/misc/psbase.html
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">6.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">7.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">7.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">7.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">7.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">8.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">9.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">10.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">11.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/psbase.html" class="active"><strong aria-hidden="true">12.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">13.</strong> Zero/One Trait</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">6.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">7.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">7.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">7.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">7.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">8.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">9.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">10.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">11.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">12.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/psbase.html" class="active"><strong aria-hidden="true">13.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">14.</strong> Zero/One Trait</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -152,40 +152,52 @@ fn main() {
     let out = &amp;mut BufWriter::new(stdout());
 }
 
-pub struct Scanner&lt;R&gt; {
-    reader: R,
+struct Scanner&lt;R&gt; {
+    _reader: R,
     buffer: Vec&lt;String&gt;,
-}
-
-impl&lt;R&gt; Scanner&lt;R&gt; {
-    pub fn new(reader: R) -&gt; Self {
-        Scanner {
-            reader,
-            buffer: Vec::new(),
-        }
-    }
 }
 
 impl&lt;R&gt; Scanner&lt;R&gt;
 where
     R: BufRead,
 {
-    pub fn next&lt;T&gt;(&amp;mut self) -&gt; T
+    fn new(mut reader: R) -&gt; Self {
+        let mut input = String::new();
+        reader.read_to_string(&amp;mut input).expect(&quot;Failed to read&quot;);
+
+        let mut buffer = Vec::new();
+        buffer.extend(input.split_whitespace().rev().map(String::from));
+
+        Self {
+            _reader: reader,
+            buffer,
+        }
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next&lt;T&gt;(&amp;mut self) -&gt; T
     where
         T: std::str::FromStr,
     {
-        loop {
-            if let Some(token) = self.buffer.pop() {
-                return token.parse().ok().expect(&quot;Failed to parse&quot;);
-            }
-            let mut input = String::new();
-            self.reader.read_line(&amp;mut input).expect(&quot;Failed to read&quot;);
-            self.buffer
-                .extend(input.split_whitespace().rev().map(String::from));
+        match self.buffer.pop() {
+            Some(token) =&gt; token.parse().ok().expect(&quot;Failed to parse&quot;),
+            None =&gt; panic!(&quot;Input is all drained&quot;),
+        }
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next_option&lt;T&gt;(&amp;mut self) -&gt; Option&lt;T&gt;
+    where
+        T: std::str::FromStr,
+    {
+        match self.buffer.pop() {
+            Some(token) =&gt; token.parse().ok(),
+            None =&gt; None,
         }
     }
 }
-
 </code></pre>
 <h2 id="w-testcases"><a class="header" href="#w-testcases">w/ Testcases</a></h2>
 <pre><code class="language-rust noplayground">use std::io::*;
@@ -202,40 +214,52 @@ fn main() {
     for _ in 0..tc {}
 }
 
-pub struct Scanner&lt;R&gt; {
-    reader: R,
+struct Scanner&lt;R&gt; {
+    _reader: R,
     buffer: Vec&lt;String&gt;,
-}
-
-impl&lt;R&gt; Scanner&lt;R&gt; {
-    pub fn new(reader: R) -&gt; Self {
-        Scanner {
-            reader,
-            buffer: Vec::new(),
-        }
-    }
 }
 
 impl&lt;R&gt; Scanner&lt;R&gt;
 where
     R: BufRead,
 {
-    pub fn next&lt;T&gt;(&amp;mut self) -&gt; T
+    fn new(mut reader: R) -&gt; Self {
+        let mut input = String::new();
+        reader.read_to_string(&amp;mut input).expect(&quot;Failed to read&quot;);
+
+        let mut buffer = Vec::new();
+        buffer.extend(input.split_whitespace().rev().map(String::from));
+
+        Self {
+            _reader: reader,
+            buffer,
+        }
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next&lt;T&gt;(&amp;mut self) -&gt; T
     where
         T: std::str::FromStr,
     {
-        loop {
-            if let Some(token) = self.buffer.pop() {
-                return token.parse().ok().expect(&quot;Failed to parse&quot;);
-            }
-            let mut input = String::new();
-            self.reader.read_line(&amp;mut input).expect(&quot;Failed to read&quot;);
-            self.buffer
-                .extend(input.split_whitespace().rev().map(String::from));
+        match self.buffer.pop() {
+            Some(token) =&gt; token.parse().ok().expect(&quot;Failed to parse&quot;),
+            None =&gt; panic!(&quot;Input is all drained&quot;),
+        }
+    }
+
+    #[allow(dead_code)]
+    #[inline(always)]
+    fn next_option&lt;T&gt;(&amp;mut self) -&gt; Option&lt;T&gt;
+    where
+        T: std::str::FromStr,
+    {
+        match self.buffer.pop() {
+            Some(token) =&gt; token.parse().ok(),
+            None =&gt; None,
         }
     }
 }
-
 </code></pre>
 
                     </main>
